[package]
name = "nori"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
sea-orm = { version = "0.10.6", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
dotenv = "0.15.0"
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
argon2 = "0.4.1"
rand = "0.8.5"
axum-extra = { version = "0.4.2", features = ["cookie-private"] }
hex = "0.4.3"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
thiserror = "1.0.38"
bytes = "1.3.0"
serde_json = "1.0.91"
mime = "0.3.16"
